@@ -8,3 +8,4 @@ wrk next
  * Add thread:set(key, value), thread:get(key), and thread:stop().
  * Record latency for every request instead of random samples.
  * Latency and requests in done() are now callable, not indexable.
+ * Only record timeouts when a response is actually received.
